--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "box-intersect": "^1.0.1",
     "inherit-class": "^1.0.1",
+    "kd-tree-javascript": "^1.0.1",
     "keycodes": "^0.2.5",
     "physijs": "0.0.4",
     "three": "^0.87.1",
